# buzzberg-mcp

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  PROMPTS.md  README.md  SECURITY.md  TOOLS.md  pyproject.toml  security-controls.json  tools_manifest.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml
buzzberg_mcp/: __init__.py  cli.py  constants.py  installers.py
examples/: add_to_watchlist.md  compare_speakers.md  get_most_mentioned_tickers.md  get_portfolio.md  get_price.md  get_recent_content.md  get_recent_source_text.md  get_sentiment.md  get_sentiment_divergence.md  get_speaker_profile.md  get_speaker_ticker_history.md  get_speaker_trade_ideas.md  get_ticker_info.md  get_ticker_mentions.md  get_ticker_timeseries.md  get_tickers_overview.md  get_top_sentiment_tickers.md  get_top_speaker_signals.md  get_top_speakers.md  read_ticker_content.md  remove_from_watchlist.md  save_trade_idea.md  search_content.md  search_trade_ideas.md
sessions/: backtest-an-idea.md  classified-post-tldr.md  contrarian-scan.md  crypto-vs-stocks-sentiment.md  daily-source-tldr.md  mentions-price-chart.md  morning-briefing.md  new-watchlist-from-signals.md  sentiment-price-chart.md  speaker-story.md  ticker-deep-dive.md  ticker-leaderboards.md
tests/: test_atomic_write.py  test_cli.py  test_docs.py  test_installers.py  test_key_handling.py
